[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=2]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="."]
margin_left = 53.0
margin_top = 69.0
margin_right = 970.0
margin_bottom = 531.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataLabel" type="Label" parent="List"]
margin_top = 1.0
margin_right = 917.0
margin_bottom = 21.0
text = "The box shows all the data that is active at the moment"
align = 1

[node name="CurrentData" type="TextEdit" parent="List"]
margin_top = 25.0
margin_right = 917.0
margin_bottom = 425.0
rect_min_size = Vector2( 800, 400 )
readonly = true

[node name="Modifiers" type="HBoxContainer" parent="List"]
margin_top = 429.0
margin_right = 917.0
margin_bottom = 461.0
custom_constants/separation = 21
alignment = 1

[node name="AOVLabel" type="Label" parent="List/Modifiers"]
margin_left = 71.0
margin_top = 6.0
margin_right = 131.0
margin_bottom = 26.0
text = "variable:"

[node name="AddOverwriteVar" type="LineEdit" parent="List/Modifiers"]
margin_left = 152.0
margin_right = 302.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )

[node name="AOVLLabel" type="Label" parent="List/Modifiers"]
margin_left = 323.0
margin_top = 6.0
margin_right = 365.0
margin_bottom = 26.0
text = "value:"

[node name="AddOverwriteVal" type="LineEdit" parent="List/Modifiers"]
margin_left = 386.0
margin_right = 536.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )

[node name="Types" type="CheckButton" parent="List/Modifiers"]
margin_left = 557.0
margin_right = 703.0
margin_bottom = 32.0
text = "Overwrite:"

[node name="AOApply" type="Button" parent="List/Modifiers"]
margin_left = 724.0
margin_right = 774.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
text = "Apply"

[node name="Save" type="Button" parent="List/Modifiers"]
margin_left = 795.0
margin_right = 845.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
text = "Save"
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="List/Modifiers/AOApply" to="." method="_on_AOApply_pressed"]
[connection signal="pressed" from="List/Modifiers/Save" to="." method="_on_Save_pressed"]
